<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- application strings -->
    <string name="app_name">GeoAgenda</string>
    <string name="app_continue_button">Continue</string>
    <string name="app_ok">OK</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_save">Save</string>
    <string name="app_delete">Delete</string>
    <string name="app_map">Map</string>
    <string name="app_advice">Atention</string>

    <!-- activity_main strings -->
    <string name="gA_title">Project</string>
    <string name="gA_developedBy">Developed by:</string>
    <string name="gA_devName">Juan Antonio García Lucena</string>
    <string name="gA_devSupervisor">Tutor:</string>
    <string name="gA_devSupervisorName">José Ramón Portillo</string>

    <!-- activity_dashboard strings -->
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_events">Saved events</string>
    <string name="dashboard_new_event">New event</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_about">About</string>

    <!-- activity_new_event strings -->
    <string name="new_event_event_title">Write a title</string>
    <string name="new_event_choose_date">Select a date</string>
    <string name="new_event_choose_time">Select an hour</string>
    <string name="new_event_choose_ringtone">Select ring tone</string>
    <string name="new_event_choose_timeAlert">Select reminder</string>
    <string name="new_event_address">Event address</string>
    <string name="new_event_dateTime">Select date and time</string>
    <string name="new_event_city">Event city</string>
    <string name="new_event_reminder">Reminder</string>
    <string name="new_event_ringtone">Ringtone</string>
    <string name="new_event_alert_title">Error</string>
    <string name="new_event_alert_info">Some field or fields are empty</string>
    <string name="new_event_alert_empty_date_time">Dates and times empty</string>
    <string name="new_event_alert_event_previous">Event date is previous than current date</string>
    <string name="new_event_alert_reminder_previous">Reminder date is previous than current date</string>
    <string name="new_event_alert_reminder_previous_event">Reminder date is after than event date</string>
    <string name="new_event_alert_time_reminder_previous">The time reminder is the same or after than the event time</string>
    <string name="new_event_alert_tone_reminder">You have to choose an alert tone</string>
    <string name="new_event_alert_title_saved">Alert</string>
    <string name="new_event_alert_event_saved">Event saved</string>

    <!-- fragment_calendar strings -->
    <string name="calendar_fragment_date">Select a date</string>

    <!-- fragment_time strings -->
    <string name="time_fragment_title">Select an hour</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- fragment_reminder strings -->

    <string name="reminder_fragment_title">Select reminder time</string>
    <string name="title_activity_events_list">EventsListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_event">ShowEventActivity</string>

    <!-- activity_events_list -->
    <string name="title_events_list">Events List</string>

    <!-- activity_show_events -->
    <string name="show_event_address">Address</string>
    <string name="show_event_city">City</string>
    <string name="show_event_date">Date</string>
    <string name="show_event_reminder">Reminder</string>
    <string name="show_event_tone">Ringtone</string>
    <string name="show_event_delete_confirmation">You are going to delete this event. Are you sure?</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_display_notification">DisplayNotificationActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>